WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43125
[Qt] QWebFrame::setContent() does not respect charset provided in the mimeType
https://bugs.webkit.org/show_bug.cgi?id=43125
Summary
[Qt] QWebFrame::setContent() does not respect charset provided in the mimeType
Pierre Rossi
Reported
2010-07-28 10:00:45 PDT
In order to use setContent with say plain text and UTF-8 encoded data, one would want to be able to pass "text/plain; charset=utf-8" for the mimeType in order to get it to work.
Attachments
proposed patch
(3.82 KB, patch)
2010-07-28 10:05 PDT
,
Pierre Rossi
no flags
Details
Formatted Diff
Diff
Remove some unneeded curly brackets to follow the WebKit coding style.
(3.82 KB, patch)
2010-08-03 06:09 PDT
,
Pierre Rossi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pierre Rossi
Comment 1
2010-07-28 10:05:00 PDT
Created
attachment 62842
[details]
proposed patch
Pierre Rossi
Comment 2
2010-08-03 06:09:41 PDT
Created
attachment 63329
[details]
Remove some unneeded curly brackets to follow the WebKit coding style.
Antonio Gomes
Comment 3
2010-08-03 06:16:53 PDT
Comment on
attachment 63329
[details]
Remove some unneeded curly brackets to follow the WebKit coding style. Nice testing! r=me
WebKit Commit Bot
Comment 4
2010-08-04 14:26:56 PDT
Comment on
attachment 63329
[details]
Remove some unneeded curly brackets to follow the WebKit coding style. Clearing flags on attachment: 63329 Committed
r64679
: <
http://trac.webkit.org/changeset/64679
>
WebKit Commit Bot
Comment 5
2010-08-04 14:27:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug