2010-08-04  Pierre Rossi  <pierre.rossi@nokia.com>

Reviewed by Antonio Gomes.

        [Qt] QWebFrame::setContent() does not respect charset provided in the mimeType
        https://bugs.webkit.org/show_bug.cgi?id=43125

        * Api/qwebframe.cpp:
        (QWebFrame::setContent):
        * tests/qwebframe/tst_qwebframe.cpp:

Canonical link: https://commits.webkit.org/55501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64679 268f45cc-cd09-0410-ab3c-d52691b4dbfc